--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </div>
           
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="scoreContainer">
                     <h1 id="guestScore">00</h1>
                 </div>
